Fix run instructions